fixed dark mode problem on training page

--- a/src/style.css
+++ b/src/style.css
@@ -38,8 +38,8 @@ body {
 }
 
 .darkModeCard {
-    background-color: #292929;
-    border: 1px solid #212121;
+    background-color: #1D1D1D;
+    border: 1px solid #060606;
     border-radius: 5px
 }
 .break-word {
